Fix spacing inside Collection

--- a/packages/block-library/src/blocks/supernova/style.scss
+++ b/packages/block-library/src/blocks/supernova/style.scss
@@ -63,5 +63,12 @@
       }
     }
   }
+  
+  &:not(.supernova-layout-one-column) {
+    
+    .nb-collection__body  .nb-collection__inner-container > :first-child {
+      --nb-block-top-spacing: 1;
+    }
+  }
 }
 
